# Reverse-cyclic-redundancy-check-CRC-

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CRC_Utils.py  CrcReversingV2.py  Dockerfile  FiniteFieldAlgebra.py  Full_Code_Old  Logger_Object.py  Main.py  Polynomial_Reversing_Method_1.py  Polynomial_Reversing_Method_2.py  Polynomial_Utils.py  Preprocessing.py  Print_Utils.py  README.md  SECURITY.md  SUPPORT.md  UI_functions.py  Utils.py  XorIn_Reversing.py  XorOut_Reversing.py  crc-reversing.py  crc_reversing.py  crc_utils.py  example_usage.py  logger_object.py  output_example.txt  polynomial_reversing_method_1.py  polynomial_reversing_method_2.py  polynomial_utils.py  preprocessing.py  print_utils.py  pyproject.toml  pyrightconfig.json  release-please-config.json  (+5 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml
Full_Code/: Output example.txt  PacketsExample.txt  readme.txt
docs/: ADDING_METHOD.md  ALGORITHM_FLOW.md  ARCHITECTURE.md
old/: crc-reversing.py  readme.txt
src/crc_reverse/: __init__.py  __main__.py  api.py  cli.py  crc_reversing.py  crc_utils.py  errors.py  logger_object.py  models.py  performance.py  polynomial_reversing_method_1.py  polynomial_reversing_method_2.py  polynomial_utils.py  preprocessing.py  print_utils.py  ui_functions.py  utils.py  xorin_reversing.py  xorout_reversing.py
tests/: conftest.py  test_api.py  test_api_stability.py  test_cli.py  test_input_validation.py  test_math_utils.py  test_performance_path.py  test_project_structure.py  test_property_math.py
tests/benchmarks/: test_benchmark_reversal.py
tests/fixtures/: crc40_golden.json
